--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,10 @@
         {% endblock %}
     </head>
     <body>
+    {% include 'navbar/navbar.html.twig' %}
+    <div class="container">
         {% block body %}{% endblock %}
+
+    </div>
     </body>
 </html>
