--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -3,8 +3,15 @@
         <a class="navbar-brand" href="#">
             <span>Shop</span>
         </a>
+        <li class="nav-item">
         <a href="{{ path('app_login') }}" class="btn btn-primary">login</a>
+        </li>
+        <li class="nav-item">
         <a href="{{ path('app_logout') }}" class="btn btn-primary">logout</a>
+        </li>
+        <li class="nav-item">
         <a href="{{ path('app_register') }}" class="btn btn-primary">sign up</a>
+        </li>
+
     </div>
 </nav>
