--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -12,6 +12,9 @@
         <li class="nav-item">
         <a href="{{ path('app_register') }}" class="btn btn-primary">sign up</a>
         </li>
+        <li class="nav-item">
+            <a href="{{ path('app_cart') }}" class="btn btn-secondary">Cart ( 4 )</a>
+        </li>
 
     </div>
 </nav>
