--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -15,6 +15,6 @@
         <li class="nav-item">
             <a href="{{ path('app_cart') }}" class="btn btn-secondary">Cart ( 4 )</a>
         </li>
-
+         {{ test_variable.coucou() }}
     </div>
 </nav>
