--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -28,9 +28,9 @@
                 <td>{{ item.quantity }}</td>
                 <td>{{ item.product.price * item.quantity}} €</td>
                 <td>
-                    <a href="" class="btn btn-primary">-</a>
+                    <a href="{{ path('app_cart_remove_one', {id:item.product.id}) }}" class="btn btn-primary">-</a>
                     <a href="{{ path('app_cart_addfromcart', {id:item.product.id, quantity:1}) }}" class="btn btn-success">+</a>
-                    <a href="" class="btn btn-danger">X</a>
+                    <a href="{{ path('app_cart_remove_row', {id:item.product.id}) }}" class="btn btn-danger">X</a>
 
                 </td>
 
@@ -42,10 +42,10 @@
 
         <tr class="table-warning">
 
-            <td><a href="" class="btn btn-danger">Empty Cart</a></td>
+            <td><a href="{{ path('app_cart_empty') }}" class="btn btn-danger">Empty Cart</a></td>
             <td></td>
             <td>Grand Total :</td>
-            <td><strong>123 €</strong></td>
+            <td><strong>{{ total}} €</strong></td>
             <td><a href="" class="btn btn-success">Make Order</a></td>
             
             
