--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -13,8 +13,8 @@
         <a href="{{ path('app_register') }}" class="btn btn-primary">sign up</a>
         </li>
         <li class="nav-item">
-            <a href="{{ path('app_cart') }}" class="btn btn-secondary">Cart ( 4 )</a>
+            <a href="{{ path('app_cart') }}" class="btn btn-secondary">Cart ( {{ cart_global.cartCount() }} )</a>
         </li>
-         {{ test_variable.coucou() }}
+
     </div>
 </nav>
