--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -46,7 +46,7 @@
             <td></td>
             <td>Grand Total :</td>
             <td><strong>{{ total}} €</strong></td>
-            <td><a href="" class="btn btn-success">Make Order</a></td>
+            <td><a href="{{ path('app_selection') }}" class="btn btn-success">Make Order</a></td>
             
             
             
